--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li class="visible-xs text-center" class="avtive">
-              <a href="#">
+              <a href="index.html">
                 <span class="#"></span><br class="hidden-xs"> Chicken</a>
             </li>
             <li class="visible-xs" class="avtive">
-              <a href="#">
+              <a href="index.html">
                 <span class="#"></span><br class="hidden-xs"> Beef</a>
             </li>
             <li class="visible-xs" class="avtive">
-              <a href="#">
+              <a href="index.html">
                 <span class="#"></span><br class="hidden-xs"> Sushi</a>
             </li>
       
